--- a/DemoNewFeeds/Base.lproj/Main.storyboard
+++ b/DemoNewFeeds/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="537"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pd0-YA-ZMv" customClass="PostHeader" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pd0-YA-ZMv">
                                                     <rect key="frame" x="10" y="0.0" width="355" height="42"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="loM-2f-5oj">
@@ -120,7 +120,7 @@
                                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lRL-at-5bB" secondAttribute="trailing" constant="20" symbolic="YES" id="v1d-Ta-hVi"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDw-6R-COf" customClass="PostContent" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDw-6R-COf">
                                                     <rect key="frame" x="10" y="52" width="355" height="420"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="325" translatesAutoresizingMaskIntoConstraints="NO" id="rj6-e8-dex">
@@ -290,7 +290,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ba6-Rc-QHE" customClass="PostFooter" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ba6-Rc-QHE">
                                                     <rect key="frame" x="10" y="482" width="355" height="55"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P2k-Op-nRU">
@@ -437,7 +437,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="537"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mp4-WH-xHC" customClass="PostHeader" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mp4-WH-xHC">
                                                     <rect key="frame" x="10" y="0.0" width="355" height="42"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zAs-Nq-pXR">
@@ -527,7 +527,7 @@
                                                         <constraint firstItem="Ner-ZV-mSy" firstAttribute="leading" secondItem="zAs-Nq-pXR" secondAttribute="trailing" constant="10" id="z7b-tI-NuG"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Qb-Yu-N4E" customClass="PostContent" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Qb-Yu-N4E">
                                                     <rect key="frame" x="10" y="52" width="355" height="365"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="325" translatesAutoresizingMaskIntoConstraints="NO" id="KsV-nN-ey8">
@@ -697,7 +697,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tdp-tL-uPF" customClass="PostFooter" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tdp-tL-uPF">
                                                     <rect key="frame" x="10" y="427" width="355" height="110"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jdE-HO-ZSp">
@@ -954,7 +954,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="213"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aqK-hv-fgv" customClass="PostHeader" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aqK-hv-fgv">
                                                     <rect key="frame" x="10" y="5" width="355" height="42"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lmb-HU-0ar">
@@ -1044,7 +1044,7 @@
                                                         <constraint firstItem="O9d-Xe-Rw2" firstAttribute="top" secondItem="lmb-HU-0ar" secondAttribute="top" id="yIZ-LZ-TYr"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PMK-Rj-pbe" customClass="PostContent" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PMK-Rj-pbe">
                                                     <rect key="frame" x="10" y="52" width="355" height="91"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="325" translatesAutoresizingMaskIntoConstraints="NO" id="FXq-C5-fv5">
@@ -1214,7 +1214,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mzt-lv-sQC" customClass="PostFooter" customModule="DemoNewFeeds" customModuleProvider="target">
+                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mzt-lv-sQC">
                                                     <rect key="frame" x="10" y="158" width="355" height="55"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yVi-LG-fA3">
