--- a/DemoNewFeeds/Views/CommentTableViewCell.xib
+++ b/DemoNewFeeds/Views/CommentTableViewCell.xib
@@ -102,11 +102,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="bottomConstraint" destination="7oN-72-b03" id="51F-xz-f6V"/>
-                <outlet property="cmtAuthorLabel" destination="8CR-fB-jF9" id="7tL-9a-iZv"/>
-                <outlet property="cmtContentLabel" destination="bLi-fg-iEK" id="1ok-rn-Ycp"/>
-                <outlet property="cmtImage" destination="yhE-hz-bvn" id="beI-uK-2ru"/>
-                <outlet property="cmtTimeLabel" destination="v0m-1R-0sE" id="Tpd-Lc-Knq"/>
+                <outlet property="commentAuthorLabel" destination="8CR-fB-jF9" id="7tL-9a-iZv"/>
+                <outlet property="commentContentLabel" destination="bLi-fg-iEK" id="1ok-rn-Ycp"/>
+                <outlet property="commentImage" destination="yhE-hz-bvn" id="beI-uK-2ru"/>
+                <outlet property="commentTimeLabel" destination="v0m-1R-0sE" id="Tpd-Lc-Knq"/>
             </connections>
             <point key="canvasLocation" x="-436" y="39"/>
         </tableViewCell>
